@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-28T00:30:32Z",
-  "count_outdated" : 366,
-  "uniques_outdated" : 75,
+  "timestamp" : "2022-05-30T00:35:57Z",
+  "count_outdated" : 367,
+  "uniques_outdated" : 76,
   "count" : 384,
   "uniques" : 81,
   "views" : [
-    {
-      "timestamp": "2022-05-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-17T00:00:00Z",
       "count": 16,
