@@ -1,12 +1,7 @@
 {
-  "count": 18,
-  "uniques": 6,
+  "count": 17,
+  "uniques": 5,
   "views": [
-    {
-      "timestamp": "2022-05-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-17T00:00:00Z",
       "count": 16,
